# NODEJS/projects/Personnel_API/swagger.json
@@ -60,7 +60,7 @@
       }
     },
     "/auth/logout": {
-      "post": {
+      "get": {
         "tags": [
           "Authentication"
         ],
@@ -487,6 +487,36 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          }
+        }
+      }
+    },
+    "/documents/documents/json": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/documents/swagger": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/documents/redoc": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
